# prompting-workbench

./: .env.wrkbnch  LICENSE  Makefile  README.md  main.py  pyproject.toml
wrkbnch_projects_space/wrkbnch_sample_01/: SD_workbench_cli_user_POV.sh
wrkbnch_projects_space/wrkbnch_sample_01/.config/flow_web/: global.json
wrkbnch_projects_space/wrkbnch_sample_01/.config/flow_web/steps/: global.json
wrkbnch_projects_space/wrkbnch_sample_01/prompts/01-01--sample_prompt_01/eval/: scenario-001-format.test.md  test_config.json
wrkbnch_projects_space/wrkbnch_sample_01/prompts/02-01--sample_prompt_02/.config/runner/: execution_plan.json
wrkbnch_projects_space/wrkbnch_sample_01/prompts/02-01--sample_prompt_02/eval/: input.test.md  scenario-002-security.test.md
wrkbnch_projects_space/wrkbnch_sample_01/prompts/02-01--sample_prompt_02/prompt_inputs/default/: dev--context_text.md
wrkbnch_space/.config/: meta_info.json
wrkbnch_space/.config/flow_web/prompts/: global.json
wrkbnch_space/.config/flow_web/steps/deployments/: default.json
wrkbnch_space/.config/runner/: execution_plan.json
wrkbnch_space/prompts/01-01--sample_prompt_01/: llm_system.jinja2
wrkbnch_space/prompts/01-01--sample_prompt_01/.config/: meta_info.json
wrkbnch_space/prompts/01-01--sample_prompt_01/eval/: scenario-003-style.test.md  scenario-004-content.test.md
wrkbnch_space/prompts/01-01--sample_prompt_01/system_inputs/default/: output_template.md
wrkbnch_space/prompts/02-01--sample_prompt_02/: user_prompt.jinja2
wrkbnch_space/prompts/02-01--sample_prompt_02/eval/: test_output_template.json
(+2 files in other folders)
