[project]
name = "prompting-workbench-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "prompting-workbench"
]

[tool.uv.sources]
prompting-workbench = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

# [build-system]
# requires = ["uv_build>=0.8.7,<0.9.0"]
# build-backend = "uv_build"