[project]
name = "prompting-workbench-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "prompting-workbench",
]

[tool.uv.sources]
prompting-workbench = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[tool.ruff.lint]
# Add "Q" to the list of enabled codes.
select = ["E4", "E7", "E9", "F", "Q"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff]
exclude = [".venv"]

[project.scripts]
lint = "ruff check ."
format = "ruff format ."
lint-fix = "ruff check . --fix"

# [build-system]
# requires = ["uv_build>=0.8.7,<0.9.0"]
# build-backend = "uv_build"
